# mcsieplugin

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  Readme_CalculationOverExplanations.txt  bootstrap.sh  configure.ac  plan.txt
benchmarks/: benchmark.sh  benchmark_all.sh  benchmark_single.sh
benchmarks/all/: benchmark_all.sh  benchmark_single.sh  doaggregation.sh  run.sh
benchmarks/consistent/: benchmark_single.sh  run.sh
benchmarks/inconsistent/: benchmark_all.sh  benchmark_single.sh  run.sh
benchmarks/wjflp/: benchmark_all.sh  benchmark_single.sh  run.sh
examples/: Makefile.am  TestContext1.cpp  benchmark.sh  benchmark_all.sh  benchmark_single.sh  ctx1.dlv  ctx2.dlv  ctx3.dlv  ctxtest.dlv  diagrewriting.test  dummymain.cpp  eqrewriting.test  explrewriting.test  mcsequilibriumtests.test  mcsie.test  parse1.hex  parse_in_1.hex  parse_out_1.hex  test.dlv  test1_dlvctx_master.hex  test2.dlv  test2_dlvctx_master.hex  test3.dlv  test3_dlvctx_master.hex
examples/benchmark1/: BenchContext1.cpp  benchctx_master.hex  d_opeq.out  ddmeem_opeq.out  dlvctx_master.hex  dm_opeq.out  eemdm.out
examples/benchmark10/: BenchContext10.cpp  benchctx_master.hex  ddmeem_opeq.out  dlvctx.out  dlvctx_master.hex  e.out
examples/benchmark11/: BenchContext11.cpp  benchctx_master.hex  dlvctx_master.hex  eemdm.out
examples/benchmark2/: BenchContext2.cpp  benchctx_master.hex  d_opeq.out  ddmeem_opeq.out  dlvctx_master.hex  dm_opeq.out  eemdm.out
examples/benchmark3/: BenchContext3.cpp  benchctx_master.hex  d_opeq.out  ddmeem_opeq.out  dlvctx.out  dlvctx_master.hex  dm_opeq.out
examples/benchmark4/: BenchContext4.cpp  benchctx_master.hex  dlvctx_master.hex  eemdm.out
examples/benchmark5/: BenchContext5.cpp  benchctx_master.hex  d_opeq.out  ddmeem_opeq.out  dlvctx_master.hex  eemdm.out
examples/benchmark6/: BenchContext6.cpp  benchctx_master.hex  dlvctx_master.hex
examples/benchmark7/: BenchContext7.cpp  benchctx_master.hex  d_opeq.out  ddmeem_opeq.out  dlvctx_master.hex  dm_opeq.out  eemdm.out
examples/benchmark8/: BenchContext8.cpp  benchctx_master.hex  dlvctx.out  dlvctx_master.hex  dlvdiagexpl_master.hex
examples/benchmark9/: BenchContext9.cpp  benchctx_master.hex  ddmeem_opeq.out  dlvctx_ctx1.dlv  dlvctx_master.hex  e.out  em.out
examples/medExample/: Context3.cpp  dmem_opeq.out  kb2.dlv
examples/medExamplePSThesis/: db.dlv  dmem_noopeq.out  dmem_opeq.out  dss.dlv  lab.dlv  master.hex  master_cppcontext3.hex  master_plusloop.hex  onto.dlv
examples/permcc/: master.hex
examples/test1/: Makefile.am  TestContext1.cpp  dlvctx_master.hex  test1_dlvctx.out  test1_dlvctx_master.hex  testctx.out  testctx_master.hex
examples/test2/: TestContext2.cpp  dlvctx_master.hex  testctx_master.hex
examples/test3/: TestContext3.cpp  dlvctx.out  dlvctx_master.hex  testctx_master.hex
include/: ACC_ContextAtom.h  BaseContextAtom.h  BaseContextPlugin.h  BridgeRule.h  BridgeRuleEntry.h  Context.h  ContextAtom.h  ContextInterfaceAtom.h  ContextInterfacePlugin.h  ContextPlugin.h  Converter.h  DLV_ASP_Context.h  DLV_ASP_ContextAtom.h  DiagnosisPrintVisitor.h  EquilibriumOutputBuilder.h  EquilibriumPrintVisitor.h  EquilibriumPrinter.h  ExplanationPrintVisitor.h  GenericContextAtom.h  Global.h  InputConverter.h  InputConverterDiagnoses.h  InputConverterDiagnosis.h  InputConverterExplanations.h  InputConverterHelper.h  InputConverterOPEquilibria.h  InputParser.h  InputParserDriver.h  MCS.h  MCSIEPlugin.h  MCSdiagexplPlugin.h  MCSequilibriumAtom.h  MCSequilibriumBridgeRule.h  MCSequilibriumBridgeRuleEntry.h  MCSequilibriumContext.h  MCSequilibriumConverter.h  MCSequilibriumParserDriver.h  MCSequilibriumPlugin.h  Makefile.am  MinPrintDualConvertFinalCallback.h  (+11 more)
src/: ACC_ContextAtom.cpp  BaseContextAtom.cpp  BaseContextPlugin.cpp  BridgeRule.cpp  BridgeRuleEntry.cpp  Context.cpp  Converter.cpp  DLV_ASP_Context.cpp  DLV_ASP_ContextAtom.cpp  DiagExplPrintVisitor.cpp  DiagnosisPrintVisitor.cpp  EquilibriumOutputBuilder.cpp  EquilibriumPrintVisitor.cpp  EquilibriumPrinter.cpp  ExplanationPrintVisitor.cpp  GenericContextAtom.cpp  Global.cpp  InputConverter.cpp  InputConverterDiagnoses.cpp  InputConverterDiagnosis.cpp  InputConverterExplanations.cpp  InputConverterHelper.cpp  InputConverterOPEquilibria.cpp  InputParser.cpp  MCS.cpp  MCSIEPlugin.cpp  MCSdiagexplPlugin.cpp  MCSequilibriumAtom.cpp  MCSequilibriumBridgeRule.cpp  MCSequilibriumBridgeRuleEntry.cpp  MCSequilibriumContext.cpp  MCSequilibriumConverter.cpp  MCSequilibriumPlugin.cpp  Makefile.am  MinPrintDualConvertFinalCallback.cpp  MinimalNotionCollector.cpp  NotionPrinter.cpp  OutputRewriter.cpp  ParseContext.cpp  PluginImport.cpp  (+6 more)
testsuite/: Makefile.am  diagexpl_comp.py  run-dlvhex-tests.sh
vs10/: mcsieplugin.sln
vs10/mcsieplugin/: config.h  mcsieplugin.vcxproj  mcsieplugin.vcxproj.filters
vs10/setup/: setup.vdproj
