EXTRA_DIST = \
  diagrewriting.test \
  explrewriting.test \
  eqrewriting.test \
  test1/dlvctx_master.hex \
  test1/testctx_master.hex \
  test1/dlvctx_ctx1.dlv \
  test1/dlvctx_ctx2.dlv \
  test1/dlvctx_ctx3.dlv \
  test1/dlvctx.out \
  test2/dlvctx_master.hex \
  test2/testctx_master.hex \
  test2/dlvctx_ctx1.dlv \
  test2/dlvctx.out \
  test3/dlvctx_master.hex \
  test3/testctx_master.hex \
  test3/dlvctx_ctx1.dlv \
  test3/dlvctx_ctx2.dlv \
  test3/dlvctx.out \
  benchmark1/dlvctx_master.hex \
  benchmark1/benchctx_master.hex \
  benchmark1/dlvctx_ctx0.dlv \
  benchmark1/dlvctx_ctx1.dlv \
  benchmark1/dlvctx_ctx2.dlv \
  benchmark1/ddmeem_opeq.out \
  benchmark1/dm.out \
  benchmark1/em.out \
  benchmark1/d.out \
  benchmark1/ddm.out \
  benchmark1/dlvctx.out \
  benchmark1/dm_opeq.out \
  benchmark1/e.out \
  benchmark1/d_opeq.out \
  benchmark2/dlvctx_master.hex \
  benchmark2/benchctx_master.hex \
  benchmark2/dlvctx_ctx0.dlv \
  benchmark2/dlvctx_ctx1.dlv \
  benchmark2/dlvctx_ctx2.dlv \
  benchmark2/ddmeem_opeq.out \
  benchmark2/dm.out \
  benchmark2/em.out \
  benchmark2/d.out \
  benchmark2/ddm.out \
  benchmark2/dlvctx.out \
  benchmark2/dm_opeq.out \
  benchmark2/e.out \
  benchmark2/d_opeq.out \
  benchmark3/dlvctx_master.hex \
  benchmark3/benchctx_master.hex \
  benchmark3/dlvctx_ctx1.dlv \
  benchmark3/dlvctx_ctx2.dlv \
  benchmark3/ddmeem_opeq.out \
  benchmark3/dm.out \
  benchmark3/em.out \
  benchmark3/d.out \
  benchmark3/ddm.out \
  benchmark3/dlvctx.out \
  benchmark3/dm_opeq.out \
  benchmark3/e.out \
  benchmark3/d_opeq.out \
  benchmark4/dlvctx_master.hex \
  benchmark4/benchctx_master.hex \
  benchmark4/dlvctx_ctx1.dlv \
  benchmark4/ddmeem_opeq.out \
  benchmark4/dm.out \
  benchmark4/em.out \
  benchmark4/d.out \
  benchmark4/ddm.out \
  benchmark4/dlvctx.out \
  benchmark4/dm_opeq.out \
  benchmark4/e.out \
  benchmark4/d_opeq.out \
  benchmark5/dlvctx_master.hex \
  benchmark5/benchctx_master.hex \
  benchmark5/dlvctx_ctx1.dlv \
  benchmark5/dlvctx_ctx2.dlv \
  benchmark5/dlvctx_ctx3.dlv \
  benchmark5/dlvctx_ctx4.dlv \
  benchmark5/ddmeem_opeq.out \
  benchmark5/dm_opeq.out \
  benchmark5/d.out \
  benchmark5/e.out \
  benchmark5/dm.out \
  benchmark5/em.out \
  benchmark5/ddm.out \
  benchmark5/dlvctx.out \
  benchmark5/d_opeq.out \
  benchmark6/dlvctx_master.hex \
  benchmark6/benchctx_master.hex \
  benchmark6/dlvctx_ctx1.dlv \
  benchmark6/dlvctx_ctx2.dlv \
  benchmark6/ddmeem_opeq.out \
  benchmark6/dm.out \
  benchmark6/em.out \
  benchmark6/d.out \
  benchmark6/ddm.out \
  benchmark6/dlvctx.out \
  benchmark6/dm_opeq.out \
  benchmark6/e.out \
  benchmark6/d_opeq.out \
  benchmark7/dlvctx_master.hex \
  benchmark7/benchctx_master.hex \
  benchmark7/dlvctx_ctx1.dlv \
  benchmark7/dlvctx_ctx2.dlv \
  benchmark7/dlvctx_ctx3.dlv \
  benchmark7/dlvctx_ctx4.dlv \
  benchmark7/d.out \
  benchmark7/ddmeem_opeq.out \
  benchmark7/dm_opeq.out \
  benchmark7/e.out \
  benchmark7/dm.out \
  benchmark7/em.out \
  benchmark7/ddm.out \
  benchmark7/dlvctx.out \
  benchmark7/d_opeq.out \
  benchmark8/dlvctx_master.hex \
  benchmark8/benchctx_master.hex \
  benchmark8/dlvctx_ctx1.dlv \
  benchmark8/dlvctx_ctx2.dlv \
  benchmark8/dlvctx_ctx3.dlv \
  benchmark8/dlvctx.out \
  benchmark9/dlvctx_master.hex \
  benchmark9/benchctx_master.hex \
  benchmark9/dlvctx_ctx1.dlv \
  benchmark9/ddmeem_opeq.out \
  benchmark9/dm.out \
  benchmark9/em.out \
  benchmark9/d.out \
  benchmark9/ddm.out \
  benchmark9/dlvctx.out \
  benchmark9/dm_opeq.out \
  benchmark9/e.out \
  benchmark9/d_opeq.out \
  benchmark10/dlvctx_master.hex \
  benchmark10/benchctx_master.hex \
  benchmark10/dlvctx_ctx1.dlv \
  benchmark10/dlvctx_ctx2.dlv \
  benchmark10/ddmeem_opeq.out \
  benchmark10/dm.out \
  benchmark10/em.out \
  benchmark10/d.out \
  benchmark10/ddm.out \
  benchmark10/dlvctx.out \
  benchmark10/dm_opeq.out \
  benchmark10/e.out \
  benchmark10/d_opeq.out \
  benchmark11/dlvctx_master.hex \
  benchmark11/benchctx_master.hex \
  benchmark11/dlvctx_ctx1.dlv \
  benchmark11/dlvctx_ctx2.dlv \
  benchmark11/ddmeem_opeq.out \
  benchmark11/dm.out \
  benchmark11/em.out \
  benchmark11/d.out \
  benchmark11/ddm.out \
  benchmark11/dlvctx.out \
  benchmark11/dm_opeq.out \
  benchmark11/e.out \
  benchmark11/d_opeq.out \
  medExample/master.hex \
  medExample/master_cppcontext3.hex \
  medExample/master_plusloop.hex \
  medExample/kb1.dlv \
  medExample/kb2.dlv \
  medExample/kb3.dlv \
  medExample/kb4.dlv \
  medExample/dmem_opeq.out \
  medExample/plusloop_dmem_opeq.out \
  independent_inc1/master.hex \
  independent_inc1/dlvctx_ctx1.dlv \
  independent_inc1/dlvctx_ctx2.dlv \
  independent_inc1/dmem_opeq.out

check_LTLIBRARIES = \
  libdlvhexplugin-mcsie-medexample.la \
  libdlvhexplugin-mcsie-testcontext1.la\
  libdlvhexplugin-mcsie-testcontext2.la\
  libdlvhexplugin-mcsie-testcontext3.la\
  libdlvhexplugin-mcsie-test1.la\
  libdlvhexplugin-mcsie-test2.la\
  libdlvhexplugin-mcsie-test3.la\
  libdlvhexplugin-mcsie-test4.la\
  libdlvhexplugin-mcsie-test5.la\
  libdlvhexplugin-mcsie-test6.la\
  libdlvhexplugin-mcsie-test7.la\
  libdlvhexplugin-mcsie-test8.la\
  libdlvhexplugin-mcsie-test9.la\
  libdlvhexplugin-mcsie-test10.la\
  libdlvhexplugin-mcsie-test11.la

AM_CPPFLAGS = \
  -I$(top_srcdir)/include \
  $(BOOST_CPPFLAGS) \
  $(DLVHEX_CFLAGS)

COMMONLDFLAGS = -avoid-version -module -L$(top_builddir)/src/ -rpath /
COMMONLIBADD = -ldlvhex-mcsie

libdlvhexplugin_mcsie_medexample_la_SOURCES = medExample/Context3.cpp
libdlvhexplugin_mcsie_medexample_la_LDFLAGS = $(COMMONLDFLAGS)
libdlvhexplugin_mcsie_medexample_la_LIBADD = $(COMMONLIBADD)

libdlvhexplugin_mcsie_testcontext1_la_SOURCES = test1/TestContext1.cpp
libdlvhexplugin_mcsie_testcontext1_la_LDFLAGS = $(COMMONLDFLAGS)
libdlvhexplugin_mcsie_testcontext1_la_LIBADD = $(COMMONLIBADD)

libdlvhexplugin_mcsie_testcontext2_la_SOURCES = test2/TestContext2.cpp
libdlvhexplugin_mcsie_testcontext2_la_LDFLAGS = $(COMMONLDFLAGS)
libdlvhexplugin_mcsie_testcontext2_la_LIBADD = $(COMMONLIBADD)

libdlvhexplugin_mcsie_testcontext3_la_SOURCES = test3/TestContext3.cpp
libdlvhexplugin_mcsie_testcontext3_la_LDFLAGS = $(COMMONLDFLAGS)
libdlvhexplugin_mcsie_testcontext3_la_LIBADD = $(COMMONLIBADD)

libdlvhexplugin_mcsie_test1_la_SOURCES = benchmark1/BenchContext1.cpp
libdlvhexplugin_mcsie_test1_la_LDFLAGS = $(COMMONLDFLAGS)
libdlvhexplugin_mcsie_test1_la_LIBADD = $(COMMONLIBADD)

libdlvhexplugin_mcsie_test2_la_SOURCES = benchmark2/BenchContext2.cpp
libdlvhexplugin_mcsie_test2_la_LDFLAGS = $(COMMONLDFLAGS)
libdlvhexplugin_mcsie_test2_la_LIBADD = $(COMMONLIBADD)

libdlvhexplugin_mcsie_test3_la_SOURCES = benchmark3/BenchContext3.cpp
libdlvhexplugin_mcsie_test3_la_LDFLAGS = $(COMMONLDFLAGS)
libdlvhexplugin_mcsie_test3_la_LIBADD = $(COMMONLIBADD)

libdlvhexplugin_mcsie_test4_la_SOURCES = benchmark4/BenchContext4.cpp
libdlvhexplugin_mcsie_test4_la_LDFLAGS = $(COMMONLDFLAGS)
libdlvhexplugin_mcsie_test4_la_LIBADD = $(COMMONLIBADD)

libdlvhexplugin_mcsie_test5_la_SOURCES = benchmark5/BenchContext5.cpp
libdlvhexplugin_mcsie_test5_la_LDFLAGS = $(COMMONLDFLAGS)
libdlvhexplugin_mcsie_test5_la_LIBADD = $(COMMONLIBADD)

libdlvhexplugin_mcsie_test6_la_SOURCES = benchmark6/BenchContext6.cpp
libdlvhexplugin_mcsie_test6_la_LDFLAGS = $(COMMONLDFLAGS)
libdlvhexplugin_mcsie_test6_la_LIBADD = $(COMMONLIBADD)

libdlvhexplugin_mcsie_test7_la_SOURCES = benchmark7/BenchContext7.cpp
libdlvhexplugin_mcsie_test7_la_LDFLAGS = $(COMMONLDFLAGS)
libdlvhexplugin_mcsie_test7_la_LIBADD = $(COMMONLIBADD)

libdlvhexplugin_mcsie_test8_la_SOURCES = benchmark8/BenchContext8.cpp
libdlvhexplugin_mcsie_test8_la_LDFLAGS = $(COMMONLDFLAGS)
libdlvhexplugin_mcsie_test8_la_LIBADD = $(COMMONLIBADD)

libdlvhexplugin_mcsie_test9_la_SOURCES = benchmark9/BenchContext9.cpp
libdlvhexplugin_mcsie_test9_la_LDFLAGS = $(COMMONLDFLAGS)
libdlvhexplugin_mcsie_test9_la_LIBADD = $(COMMONLIBADD)

libdlvhexplugin_mcsie_test10_la_SOURCES = benchmark10/BenchContext10.cpp
libdlvhexplugin_mcsie_test10_la_LDFLAGS = $(COMMONLDFLAGS)
libdlvhexplugin_mcsie_test10_la_LIBADD = $(COMMONLIBADD)

libdlvhexplugin_mcsie_test11_la_SOURCES = benchmark11/BenchContext11.cpp
libdlvhexplugin_mcsie_test11_la_LDFLAGS = $(COMMONLDFLAGS)
libdlvhexplugin_mcsie_test11_la_LIBADD = $(COMMONLIBADD)
