MCSIEHEADERS = \
		 ContextInterfacePlugin.h \
		 ContextInterfaceAtom.h \
		 BaseContextAtom.h \
		 ACC_ContextAtom.h \
		 BridgeRule.h \
		 BridgeRuleEntry.h \
		 Context.h \
		 MCS.h \
		 BaseContextPlugin.h

pkginclude_HEADERS = $(MCSIEHEADERS)

noinst_HEADERS = \
		 MCSIEPlugin.h \
		 DLV_ASP_ContextAtom.h \
		 InputParser.h \
		 InputConverterDiagnoses.h \
		 InputConverterExplanations.h \
		 InputConverterOPEquilibria.h 

foo = \
		 OutputRewriter.h \
		 EquilibriumPrintVisitor.h \
		 DiagExplPrintVisitor.h \
		 ExplanationPrintVisitor.h \
		 Timing.h
