MCSIEHEADERS = \
		 ContextInterfacePlugin.h \
		 ContextInterfaceAtom.h \
		 BaseContextAtom.h \
		 ACC_ContextAtom.h \
		 BridgeRule.h \
		 BridgeRuleEntry.h \
		 Context.h \
		 EquilibriumPrinter.h \
		 MCS.h \
		 NotionPrinter.h \
		 BaseContextPlugin.h

pkginclude_HEADERS = $(MCSIEHEADERS)

noinst_HEADERS = \
		 DLV_ASP_ContextAtom.h \
		 InputConverterDiagnoses.h \
		 InputConverterExplanations.h \
		 InputConverterOPEquilibria.h \
		 InputParser.h \
		 MCSIEPlugin.h \
		 MinPrintDualConvertFinalCallback.h \
		 PrintAndAccumulateModelCallback.h

foo = \
		 OutputRewriter.h \
		 Timing.h
