MCSIEHEADERS = \
		 ACC_ContextAtom.h \
		 BaseContextAtom.h \
		 BaseContextPlugin.h \
		 BridgeRule.h \
		 BridgeRuleEntry.h \
		 Context.h \
		 ContextInterfaceAtom.h \
		 ContextInterfacePlugin.h \
		 DLV_ASP_ContextAtom.h \
		 EquilibriumPrinter.h \
		 InputConverterDiagnoses.h \
		 InputConverterExplanations.h \
		 InputConverterOPEquilibria.h \
		 InputParser.h \
		 MCS.h \
		 MinPrintDualConvertFinalCallback.h \
		 MinimalNotionCollector.h \
		 NotionPrinter.h \
		 PrintAndAccumulateModelCallback.h \
     ProgramCtxData.h \
     SaturationMetaAtom.h \
		 MCSIEPlugin.h

pkginclude_HEADERS = $(MCSIEHEADERS)
