# run the test script
TESTS = run-dlvhex-tests.sh

EXTRA_DIST = run-dlvhex-tests.sh

# some variables for the test-script
TESTS_ENVIRONMENT = EXAMPLES=$(CURDIR)/$(top_srcdir)/examples TESTDIR=$(CURDIR)/$(top_srcdir)/testsuite DLVHEX=dlvhex PARAMETERS="-s --plugindir=$(CURDIR)/$(top_builddir)/src:$(CURDIR)/$(top_builddir)/examples --useKR2010rewriting"
